# parallel-ripple-search

./: .gitignore  .gitmodules  CMakeLists.txt  FileParser.cpp  LICENSE  README.md  WeightedGraph.cpp  WeightedGraph.h  fringe.cpp  graph_generator.cpp  graph_view.cpp  high.cpp  main.cpp  ripple.cpp  utility.cpp  utility.h
baseline/: FileParser.cpp  FileParser.h  Timer.cpp  Timer.h  WeightedGraph.cpp  WeightedGraph.h  baseline.cpp  findpath.cpp  main.cpp
baseline/thestar-adapted/: README.md  Timer.cpp  Timer.h  findpath  findpath.cpp  makefile  stlastar.h
graph-gen/: README.md  c_graph.ml  c_grph.ml  dune  sample-poly.ppm
report/: benchmark.tex  bibl_conf.bib  conclusion.tex  implementation.tex  introduction.tex  main.tex  parallel-ripple-search.tex  related-work.tex  results.tex
report/img/: cost_overhead.eps  ripple_3d_surface.eps  runtime.eps  scenario_cost.eps  scenario_time.eps  speedup.eps  var_cost.eps  var_time.eps
scripts/: vis.py
src/: Astar.cpp  Astar.h  Astar_high.cpp  Astar_high.h  Astar_priority.cpp  FileParser.cpp  WeightedGraph.cpp  bench.cpp  fringe.cpp  fringe.h  fringe_simd.cpp  fringe_simd.h  graph_view.cpp  high.cpp  high_level_path.cpp  high_level_path.h  map.cpp  map.h  ripple.cpp  ripple.h  stlastar.cpp  stlastar.h
src/benchmark/: bench.cpp  benchmarks.cpp  benchmarks.h
src/graph/: Map.cpp  Map.h  Point.h  WeightedGraph.cpp  WeightedGraph.h  map.cpp  map.h
src/reference/: AStarJHJ.h  AStarJHJTempMod.h  Astar.h  AstarJHJ.cpp  AstarJHJ.h  BoostAStarSearch.h  BoostAstarSearch.h  FringeSearch.cpp  FringeSearch.h  FringeSearchSimd.cpp  FringeSearchSimd.h  FringeSearchVec.cpp  FringeSearchVec.h  FringeVecSearch.cpp  FringeVecSearch.h  JHJAstarSearch.cpp  JHJAstarSearch.h  fringe.cpp  fringe.h  fringe_simd.h  stlastar.cpp  stlastar.h
src/ripple/: Collision.cpp  Collision.h  Constants.h  Contants.h  GridHighLevelGraph.cpp  HighLevelGraph.cpp  HighLevelGraph.h  HighLevelGraph_grid.cpp  Message.h  RippleSearch.cpp  RippleSearch.h  RippleThread.cpp  RippleThread.h  Thread.h  high_level_path.cpp  high_level_path.h  ripple.cpp  ripple.h
src/utility/: FileParser.cpp  FileParser.h  PriorityQueue.h
